# tg-tool-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
scripts/: install-skill-local.ps1  install-skill-local.sh
skills/telegram-deployer/: SKILL.md
skills/telegram-deployer/templates/: .dockerignore  .env.example.template  Dockerfile.template  bot.py.template  docker-compose.yml.template  handler_blocks.md  requirements.txt.template
tg_tool_wrapper/: __init__.py  bot.py
