[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-tool-wrapper"
version = "0.1.0"
description = "Wrap any Python function as a Telegram bot — owner-locked, decorator-based, deployable via Docker."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tin43800" }]
keywords = ["telegram", "bot", "automation", "wrapper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "pyTelegramBotAPI>=4.14.0",
    "truststore>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/tin43800/tg-tool-wrapper"
Repository = "https://github.com/tin43800/tg-tool-wrapper"
Issues = "https://github.com/tin43800/tg-tool-wrapper/issues"

[tool.setuptools.packages.find]
include = ["tg_tool_wrapper*"]
